Fix menu positioning on IE.
(Still need to sort out z-index issue)

--- a/public/stylesheets/tt.css
+++ b/public/stylesheets/tt.css
@@ -1184,6 +1184,7 @@ a.description {
   margin-top: 8px;
   margin-left: -1px;
   width: auto;
+  clear: left;
 
   background-color: #fcfcfc;
   border-left: 1px solid #ddd;
